# As-Rigid-As-Possible-On-Polygon-Meshes

./: .gitignore  CMakeLists.txt  Dodecahedron.off  IsoSphereDual4.ply  README.md  big.ply  bigFace.ply  bunny.off  bunny.ply  cat.ply  cube-connectivity.dmat  cube-faces.dmat  cube-planes.dmat  cube-selection.dmat  cube.off  cube.ply  custom_arap.cpp  custom_arap.h  happly.h  ico.ply  interior_test.ply  main.cpp  multiPlane.ply  plane-cube.off  simple.ply  torus.ply
Plotting/: 100.csv  100GD.csv  164.csv  164GD.csv  228.csv  228GD.csv  356.csv  356GD.csv  36.csv  36GD.csv  484.csv  484GD.csv  644.csv  644GD.csv  68.csv  68GD.csv  Experiment2-big-con.csv  Experiment2-big-gd.csv  Experiment2-small-con.csv  Experiment2-small-gd.csv  FaceVsVertFace.csv  FaceVsVertVert.csv  GDvCONBigCON.csv  GDvCONBigGD.csv  GDvCONSmallCON.csv  GDvCONSmallGD.csv  GDvsCON.py  averageStepTime.py  big-block-sar.csv  big-con-sar.csv  big-onlyCon-sar.csv  faceVsVert.py  gdsVsGradient.py  stepImprovements.csv  stepImprovements.py  time-energy-plot-3-methods.py  time-energy-plot-Experiment-2-big.py  time-energy-plot-Experiment-2-small.py
bend-test-models/: 100.ply  228.ply  356.ply  36.ply  644.ply  68.ply
cmake/: libigl.cmake
include/: custom_arap.h  custom_data.h  face_arap.h  face_arap_data.h  helper.h  plane_arap.h  plane_arap_data.h  poly_mesh_data.h
models/: bigFace.ply  blocks.ply  bunny.ply  complex.ply  dodecahedron.ply  parallelFaces.ply  smile.ply  truncatedIcosahedron.ply  veryBigFace.ply
models/bend-test-models/: 164.ply  484.ply
source/: custom_arap.cpp  face_arap.cpp  plane_arap.cpp
